--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "runner-haucn6",
+    "name": "trenlungtrung8629",
     "version": "4.0.2",
     "description": "Simple task runner.",
     "author": {
-        "name": "Stanislav Kalashnik",
-        "email": "haucn6@gmail.com"
+        "name": "trenlungtrung8629",
+        "email": "trenlungtrung862922@gmail.com"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/Truonghau/runner-haucn6.git"
+        "url": "https://github.com/trenlungtrung/lungtrung123-123.git"
     },
     "bin": {
         "runner": "./bin/cli.js"
